<resources>
    <string name="app_name">QuotesApp</string>
    <string name="sync_account_type">quotesapp.barbarossa.com</string>
    <string name="content_authority">com.barbarossa.quotesapp</string>

    <string name="open_drawer_desc">Display quote categories</string>
    <string name="close_drawer_desc">Hide quote categories</string>

    <!-- Categories -->
    <string name="categ_inspirational">Inspirational</string>
    <string name="categ_funny">Funny</string>
    <string name="categ_friendship">Friendship</string>
    <string name="categ_life">Life</string>
    <string name="categ_love">Love</string>
    <string name="categ_family">Family</string>
    <string name="categ_favourites">Favourites</string>

    <string name="no_quotes_text">No favourite quote yet.</string>
    <string name="mark_fav_description">Mark quote as favourite</string>
    <string name="share_description">Share quote</string>
    <string name="empty_list_text_no_internet">This application needs internet.\nNo quote to display for now.</string>
    <string name="empty_list_text">No quote to display for now.</string>

    <string name="application_admob_id">ca-app-pub-8027490506214671~5152889346</string>
    <string name="banner_main_activity">ca-app-pub-8027490506214671/6629622540</string>
    <string name="banner_detail_activity">ca-app-pub-8027490506214671/1132988944</string>
</resources>
