<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inspirational_sel"
            android:checked="true"
            android:title="@string/categ_inspirational"/>
        <item
            android:id="@+id/funny_sel"
            android:title="@string/categ_funny" />
        <item
            android:id="@+id/friendship_sel"
            android:title="@string/categ_friendship" />
        <item
            android:id="@+id/life_sel"
            android:title="@string/categ_life" />
        <item
            android:id="@+id/love_sel"
            android:title="@string/categ_love" />
        <item
            android:id="@+id/family_sel"
            android:title="@string/categ_family" />
    </group>
</menu>
